test/syc/good/funptr.c
/*
 * Function pointer
 */

void (*fp)(void);
